--- a/mobile-app/src/pages/chatroom/chatroom.scss
+++ b/mobile-app/src/pages/chatroom/chatroom.scss
@@ -9,6 +9,7 @@ page-chatroom {
 
   .userName{
     text-transform: capitalize;
+    
   }
 /************** my scss ***************/
   ion-footer {
@@ -21,6 +22,7 @@ page-chatroom {
     font-weight: 400!important;
     letter-spacing: 0px;
     color: white;
+    padding-left: 0px!important;
   }
   .button-inner{
     color: white;
@@ -128,7 +130,7 @@ page-chatroom {
           width: auto;
           max-width: 80%;
           margin-left: 0px;
-          border-bottom-right-radius: 2px;
+          
           
         }
         
@@ -258,7 +260,7 @@ page-chatroom {
   position: absolute;
   right: -60px !important;
   border-radius: 50px;
-  top: 0px;
+  top: 15px;
   width: 50px!important;
   height: 50px!important;
   overflow: hidden!important;
@@ -272,10 +274,12 @@ page-chatroom {
 }
 .right{
   margin-right: 55px!important;
+  border-bottom-right-radius: 0px!important;
   transition: all .8s ease;
 }
 .e{
   margin-right: 0px!important;
+  border-bottom-right-radius: 10px!important;
   transition: all .8s ease;
 }
 .ionSpinner{
@@ -331,4 +335,14 @@ page-chatroom {
 }
 .verticallyAlign::-webkit-scrollbar {
   display: none;
+}
+
+page-chatroom .scroll-content{
+  background-color: #f0f0f0!important;
+}
+.ios ion-toolbar svg {
+  display: none;
+}
+.ios .button-inner{
+  color:black;
 }
